# Serger

./: CMakeLists.txt  Config.cpp  Config.h  Enums.cpp  Fimager.cpp  Manager.cpp  README.md  ServerClass.cpp  Values.cpp  Values.h  job.cpp  job.h  main.cpp
headers/: Config.h  Fimager.h  Manager.h  ServerClass.h  Values.h  job.h
